--- a/src/app/learn-physics/content/ball-physics/ball-physics.component.html
+++ b/src/app/learn-physics/content/ball-physics/ball-physics.component.html
@@ -1,3 +1,39 @@
-<p>
-  ball-physics works!
-</p>
+<div class="pf-ball-physics">
+  <div class="pf-ball-physics__header">
+    <div class="pf-ball-physics__header-content">
+      <div class="pf-ball-physics__header-border"></div>
+      <h4 class="pf-ball-physics__header-title">
+        Introduction to Ball Physics
+      </h4>
+      <p>
+        This section will define and discuss what ball-physics in physics is. <br>
+        Compute for ball-physics and learn the interactive and fun way.
+      </p>
+    </div>
+  </div>
+  <div class="pf-ball-physics__body">
+    <section class="pf-ball-physics__ball-physics-definition">
+      <h4>
+        What is Ball Physics?
+      </h4>
+      <div class="pf-ball-physics__ball-physics-content">
+        <div class="pf-ball-physics__ball-physics-image-container">
+          <img src="./assets/img/ball.gif" alt="ball-physics">
+        </div>
+        <div class="pf-ball-physics__ball-physics-description">
+          <p>
+            <b class="text-danger">Ball physics</b> concerns the physical behaviour of bouncing balls, particularly its
+            motion before, during, and after impact against the surface of another body
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Ball physics Interactive -->
+    <section class="pf-acceleration__interactive">
+      <h4>Interactive Example</h4>
+      <div class="pf-acceleration__interactive-canvas">
+        <pf-interactive-ball></pf-interactive-ball>
+      </div>
+    </section>
+  </div>
+</div>
