--- a/src/app/learn-physics/content/speed/speed.component.scss
+++ b/src/app/learn-physics/content/speed/speed.component.scss
@@ -32,6 +32,11 @@
     flex-direction: column;
   }
 
+  &__slider-item {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
   &__header-border {
     border-top: 5px solid $light;
     width: 100px;
@@ -75,6 +80,10 @@
     padding-left: 10px;
   }
 
+  &__answer-container {
+    padding: 15px;
+  }
+
   &__body {
     position: relative;
 
@@ -103,5 +112,15 @@
     margin-top: 10px;
     display: flex;
     justify-content: space-between;
+  }
+
+  &__input {
+    width: 100px;
+  }
+
+  &__course-end-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
